--- a/ACLObjectSecurity/ACLObjectSecurity.csproj
+++ b/ACLObjectSecurity/ACLObjectSecurity.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6CE298B8-8964-4481-B823-D682587B08E6}</ProjectGuid>
+    <ProjectGuid>{5870B3F5-506F-4B90-B44D-F526CF755608}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ACL</RootNamespace>
-    <AssemblyName>ACL</AssemblyName>
+    <RootNamespace>ACLObjectSecurity</RootNamespace>
+    <AssemblyName>ACLObjectSecurity</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,13 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccessControlList.cs" />
-    <Compile Include="ReadWriteAccessControlList.cs" />
-    <Compile Include="IAccessControlList.cs" />
-    <Compile Include="Operation.cs" />
-    <Compile Include="ResourceHolder.cs" />
+    <Compile Include="PermissionKeyAttribute.cs" />
+    <Compile Include="PermissionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OperationHolder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
